# langgraph-agentic-orchestration

./: .env.example  .gitignore  Makefile  README.md  README_tr.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  aggregator.py  evaluator.py  optimizer.py  orchestrator.py  prompts.py  worker.py
app/agents/prompts/: aggregator.yaml  evaluator.yaml  optimizer.yaml  orchestrator.yaml  worker.yaml
app/api/: deps.py  routes.py
app/core/: config.py  logging.py
app/graph/: __init__.py  builder.py  nodes.py  state.py
app/llm/: __init__.py  errors.py  provider.py
app/schemas/: __init__.py  api.py  evaluation.py  tasks.py  workflow.py
app/services/: __init__.py  analyze_service.py
